# PetitRenderer

./: .gitignore  .gitmodules  .nomnoml  CMakeLists.txt  README.md  imgui.ini
assets/models/gtx/: GTX 1070TI.mtl
assets/shaders/: depthMap.vert  pbr.frag  phong.frag  phong.vert
assets/shaders/SSAO/: SSAO.frag  SSAOblur.frag  SSAOgeometry.frag  SSAOgeometry.vert
assets/shaders/tessellation/: phongBump.frag  phongBump.tesc  phongBump.tese  phongPN.frag  phongPN.tesc  phongPN.tese  phongPN.vert
docs/html/: annotated.html  camera_8hpp_source.html  class_camera-members.html  class_camera.html  class_cube-members.html  class_cube.html  class_cube_map-members.html  class_cube_map.html  class_file_model-members.html  class_file_model.html  class_light-members.html  class_light.html  class_main_loop-members.html  class_main_loop.html  class_model-members.html  class_model.html  class_plane-members.html  class_plane.html  class_scene-members.html  class_scene.html  class_shader-members.html  class_shader.html  class_sphere-members.html  class_sphere.html  class_ui.html  classes.html  files.html  functions.html  functions_func.html  headers_8hpp_source.html  hierarchy.html  inputs_8hpp_source.html  light_8hpp_source.html  main_loop_8hpp_source.html  menudata.js  model_8hpp_source.html  scene_8hpp_source.html  shader_8hpp_source.html  sphere_8hpp_source.html  struct_model_1_1model_description-members.html  (+3 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_b.js  all_c.js  classes_2.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_9.js  searchdata.js
include/: camera.hpp  headers.hpp  inputs.hpp  light.hpp  mainLoop.hpp  model.hpp  scene.hpp  shader.hpp  sphere.hpp  ssao.hpp  ui.hpp  utils.hpp
shaders/: colors.frag  cube.frag  cube.vert  cubeTex.frag  lamp.frag  lamp.vert  phong.frag  phong.vert  phongTex.frag  phongTex.vert  phongTexTess.frag  phongTexTess.tesc  phongTexTess.tese  phongTexTess.vert
src/: camera.cpp  distantLight.cpp  inputs.cpp  light.cpp  main.cpp  mainLoop.cpp  scene.cpp  shader.cpp  sphere.cpp  ui.cpp
src/model/: cube.cpp  cubeMap.cpp  fileModel.cpp  model.cpp  plane.cpp  polygon.cpp  sphere.cpp
